@@ -2241,6 +2241,15 @@ when "53.1"
 when "53.out"
   fairy.input("test/test-53.out.vf").here.each{|l| puts l}
 
+when "53.ruby"
+  h = {}
+  File.open("sample/wc/data/sample_10M.txt").each do |line|
+    line.chomp.split.each{|w| h[w] = (h[w] || 0) + 1}
+  end
+  for k, v in h
+    print k, v, "\n"
+  end
+
 when "54.init"
   fairy.input("sample/wc/data/fairy.cat").output("test/test-54.vf")
 
